Add templates, models, admin models

--- a/mole/templates/incidents/index.html
+++ b/mole/templates/incidents/index.html
@@ -1,75 +1,34 @@
-{% load static %}
-<!DOCTYPE html> 
-<html lang="ru">
-  <head>    
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Подключен файл со стандартными стилями бустрап -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Служба работы с заявками</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'incidents:first_page' %}">
-            <img src="{% static 'img/mole.png' %}" width="50" height="50" class="d-inline-block align-center" alt="" href="{% url 'incidents:first_page' %}"> 
-            Mole
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Заявки</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-            </ul>
-            <span class="navbar-text">
-              Navbar text with an inline element
-            </span>
+{% extends 'base.html' %}
+{% block content %}
+  <div class="container py-5">     
+    <div class="row">
+      <div class="col-sm" href='/'>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Входящих</h5>
+            <p class="card-text">12</p>
+            <a href="#" class="btn btn-primary">Показать</a>
           </div>
         </div>
-      </nav>
-    </header>
-    <main>
-      <div class="container py-5">     
-        <div class="row">
-          <div class="col-sm" href='/'>
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Входящих</h5>
-                <p class="card-text">12</p>
-                <a href="#" class="btn btn-primary">Показать</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Исходящих</h5>
-                <p class="card-text">2</p>
-                <a href="#" class="btn btn-primary">Показать</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card">
-              <div class="card-body" href='/'>
-                <h5 class="card-title">Закрыто</h5>
-                <p class="card-text">123</p>
-                <a href="#" class="btn btn-primary">Показать</a>
-              </div>
-            </div>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Исходящих</h5>
+            <p class="card-text">2</p>
+            <a href="#" class="btn btn-primary">Показать</a>
           </div>
         </div>
-      </div>  
-    </main>
-  </body>
+      </div>
+      <div class="col-sm">
+        <div class="card">
+          <div class="card-body" href='/'>
+            <h5 class="card-title">Закрыто</h5>
+            <p class="card-text">123</p>
+            <a href="#" class="btn btn-primary">Показать</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
+{% endblock %}
