Add view category_list+template

--- a/mole/templates/includes/header.html
+++ b/mole/templates/includes/header.html
@@ -2,8 +2,8 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'incidents:first_page' %}">
-            <img src="{% static 'img/mole.png' %}" width="50" height="50" class="d-inline-block align-center" alt="" href="{% url 'incidents:first_page' %}"> 
+        <a class="navbar-brand" href="{% url 'incidents:index' %}">
+            <img src="{% static 'img/mole.png' %}" width="50" height="50" class="d-inline-block align-center" alt="" href="{% url 'incidents:index' %}"> 
             Mole
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
