--- a/mole/templates/incidents/index.html
+++ b/mole/templates/incidents/index.html
@@ -2,33 +2,17 @@
 {% block content %}
   <div class="container py-5">     
     <div class="row">
+      {% for cat in cat_count %}
       <div class="col-sm" href='/'>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Входящих</h5>
-            <p class="card-text">12</p>
+            <h5 class="card-title">{{ cat.title }}</h5>
+            <p class="card-text">{{ cat.count }}</p>
             <a href="#" class="btn btn-primary">Показать</a>
           </div>
         </div>
       </div>
-      <div class="col-sm">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Исходящих</h5>
-            <p class="card-text">2</p>
-            <a href="#" class="btn btn-primary">Показать</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="card">
-          <div class="card-body" href='/'>
-            <h5 class="card-title">Закрыто</h5>
-            <p class="card-text">123</p>
-            <a href="#" class="btn btn-primary">Показать</a>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
     </div>
   </div>  
 {% endblock %}
