--- a/mole/templates/base.html
+++ b/mole/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>Служба работы с заявками</title>
+    <title>{% block title %}Служба работы с заявками{% endblock %}</title>
   </head>
   <body>
     {% include 'includes/header.html' %}
