--- a/mole/templates/incidents/category_list.html
+++ b/mole/templates/incidents/category_list.html
@@ -1,30 +1,34 @@
 {% extends 'base.html' %}
+{% block title %}
+  Заявки категории 
+    {% with apps|first as first_app %}
+      {{ first_app.category }}
+    {% endwith %}
+{% endblock %}
 {% block content %}
-<div class="card">
-    <div class="card-header">
-      <ul class="nav nav-tabs card-header-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="true" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
-    </div>
-    {% for app in apps %}
-        <div class="card">
-            <h5 class="card-header">#{{ app.pk }}</h5>
-            <div class="card-body">
+  <div class="card">
+  <h2 class="card-header">
+    Заявки категории
+    {% with apps|first as first_app %}
+      {{ first_app.category }}
+    {% endwith %}
+  </h2>
+  </div>
+  <div class="container">
+  {% for app in apps %}
+    <div class="row">
+      <div class="col-md-10 offset-md-1">
+          <h5 class="card-header">Заявка #{{ app.pk }}</h5>
+          <div class="card-body">
             <h5 class="card-title">{{ app.title }}</h5>
             <p class="card-text">Автор: {{ app.author }}</p>
             <p class="cast_text">Статус: {{ app.status }}</p>
             <p class="cast_text">Дата создания: {{ app.pub_date }}</p>
             <a href="#" class="btn btn-primary">Подробнее</a>
-            </div>
-        </div>
-    {% endfor %}
+          </div>
+      </div>
+    </div>
+  {% endfor %}
+</div>
 </div>
 {% endblock %}
