--- a/mole/templates/includes/footer.html
+++ b/mole/templates/includes/footer.html
@@ -1,3 +1,3 @@
-<footer class="border-top text-center py-3">
-    <p>© 2023 Copyright <span style="color:red">Mole</span></p>    
+<footer class="mt-auto">
+    <p><center>© 2023 Copyright <span style="color:brown">Mole</span></center>></p>    
 </footer>
