--- a/mole/templates/includes/header.html
+++ b/mole/templates/includes/header.html
@@ -4,7 +4,7 @@
         <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'incidents:index' %}">
             <img src="{% static 'img/mole.png' %}" width="50" height="50" class="d-inline-block align-center" alt="" href="{% url 'incidents:index' %}"> 
-            Mole
+            <span style="color:brown">Mole</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
